--- a/land.html
+++ b/land.html
@@ -6,7 +6,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            max-width: 1000px;
+            max-width: 600px;
             margin: 0 auto;
             padding: 20px;
         }
@@ -17,7 +17,7 @@
             width: 100%;
             padding: 10px;
             margin-top: 5px;
-            border: 1px solid #ddd;
+            border: 1px rgb(221, 221, 221);
             border-radius: 4px;
         }
         .autocomplete-items {
